--- a/android/build.gradle
+++ b/android/build.gradle
@@ -3,7 +3,7 @@
 buildscript {
     ext {
         buildToolsVersion = "28.0.3"
-        minSdkVersion = 16
+        minSdkVersion = 19
         compileSdkVersion = 28
         targetSdkVersion = 28
         supportLibVersion = "28.0.0"
@@ -11,6 +11,8 @@ buildscript {
     repositories {
         google()
         jcenter()
+        mavenLocal()
+        mavenCentral()
     }
     dependencies {
         classpath("com.android.tools.build:gradle:3.4.1")
@@ -31,8 +33,28 @@ allprojects {
             // Android JSC is installed from npm
             url("$rootDir/../node_modules/jsc-android/dist")
         }
+        maven {
+            url ('https://jitpack.io')
+        }
 
         google()
         jcenter()
+        mavenCentral()
     }
 }
+
+subprojects { subproject ->
+        afterEvaluate {
+                if ((subproject.plugins.hasPlugin('android') || subproject.plugins.hasPlugin('android-library'))) {
+                        android {
+                                variantFilter { variant ->
+                                        def names = variant.flavors*.name
+                                      if (names.contains("reactNative51") || names.contains("reactNative55")) {
+                                                setIgnore(true)
+                                            }
+                                    }
+                            }
+                    }
+            }
+    }
+
